2002-08-18  James Henstridge  <james@daa.com.au>

	* pygtk.spec: fix up spec file to reflect new locations of files.

	* pygtk.py: helper script for parallel installs.

	* Makefile.am: fix up makefile for parallel install.

2002-08-14  Johan Dahlin  <jdahlin@telia.com>

	Patch from Christian Reis <kiko@async.com.br>, fixes bug 88845:
	* gtk.py: Add pos argument to Editable.insert_text
        * gtkmodule.c: Dito

2002-04-08  Matt Wilson  <msw@redhat.com>

	* gdkpixbufmodule.c (pygdk_pixbuf_scale, pygdk_pixbuf_composite)
	(pygdk_pixbuf_composite_color): parse arguments as double for
	those functions that take doubles.

	* generate/gtkmisc.defs (gtk_pixmap_set): added (null-ok).  NULL
	means that the pixmap has no alpha.

2002-03-16  James Henstridge  <james@daa.com.au>

	* gtk.py (selection_owner_get): add wrapper (bug 66130)

	* generate/gtkdnd.defs (gdk_selection_owner_get): add function
	from bug 66130

	* gtk.py: add wrappers from bug 66121.

	* generate/gtk.defs (gdk_keyval_name): add keyval functions (from
	bug 66121).

2002-01-08  James Henstridge  <james@daa.com.au>

	* gdkpixbufmodule.c (pygdk_pixbuf_dealloc): use PyObject_DEL.
	(pygdk_pixbuf_animation_dealloc): same here.

	* gdkimlibmodule.c (PyGdkImlibImage_Dealloc): use PyObject_DEL.

	* gtkmodule.c (PyGtk_dealloc): use PyObject_DEL
	(PyGtkAccelGroup_Dealloc): same here.
	(PyGtkStyleHelper_Dealloc): same here.
	(PyGtkStyle_Dealloc): same here.
	(PyGdkFont_Dealloc): same here.
	(PyGdkColor_Dealloc): same here.
	(PyGdkEvent_Dealloc): same here.
	(PyGdkWindow_Dealloc): same here.
	(PyGdkGC_Dealloc): same here.
	(PyGdkColormap_Dealloc): same here.
	(PyGdkDragContext_Dealloc): same here.
	(PyGtkSelectionData_Dealloc): same here.
	(PyGdkAtom_Dealloc): same here.
	(PyGdkCursor_Dealloc): same here.
	(PyGtkCTreeNode_Dealloc): same here.

	* pygtk.h: if PyObject_DEL isn't defined, define it as PyMem_DEL.

2002-01-03  James Henstridge  <james@daa.com.au>

	* libglademodule.c: fix up copyright year.
