@@ -1,5 +1,10 @@
 2002-08-18  James Henstridge  <james@daa.com.au>
 
+	* libglademodule.c (_wrap_glade_xml_get_widget_prefix): add
+	method (from bug #72659).
+
+	* libglade.py (GladeXML.get_widget_prefix): add method wrapper.
+
 	* pygtk.spec: fix up spec file to reflect new locations of files.
 
 	* pygtk.py: helper script for parallel installs.
